--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,116 @@
-@import './common';
-@import './example';
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #fafafa;
+    color: #212121;
+    line-height: 1.5;
+}
+
+a{
+    color: #212121;
+    text-decoration: none;
+}
+
+.search-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+
+    padding: 15px;
+    background-color: darkblue;
+
+
+    & input{
+        width: 300px;
+        height: 40px;
+        border-radius: 5px;
+    }
+
+    & input:hover, & input:focus{
+
+        outline-color: aqua;
+    }
+
+    & button{
+        width: 90px;
+        height: 35px;
+        border-radius: 5px;
+        border-color: gray;
+        background-color: gray;
+
+        cursor: pointer;
+       
+
+        &:hover, &:focus{
+            color: #fff;
+            background-color: goldenrod;
+            border-color: orangered;
+        }
+    }
+}
+
+.load-more{
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90px;
+    height: 35px;
+    border-radius: 5px;
+    border-color: gray;
+    background-color: gray;
+
+    cursor: pointer;
+    
+    
+        &:hover,
+        &:focus {
+            color: #fff;
+            background-color: goldenrod;
+            border-color: orangered;
+        }
+}
+
+.gallery{
+    min-width: 1100px;
+    min-height: 1400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    padding: 5px;
+
+    & img{
+        overflow: hidden;
+        width: 400px;
+        height: 300px;
+    }
+}
+
+
+.photo-card{
+    min-width: 400px;
+    min-height: 488px;
+    display: flex;
+    flex-direction: column;
+    cursor: zoom-in;
+    // pointer-events: none;
+    
+}
+
+.info{
+    padding: 5px;
+    border: 1px solid gray;
+    cursor: default;
+
+}
+
+
+
